# lensword

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
backend/: .dockerignore  .env.example  .venv  Dockerfile  pytest.ini  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py  mappers.py
backend/app/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
backend/tests/: conftest.py  test_additive_column_migration.py  test_admin_api.py  test_ai_prompt_hardening.py  test_ai_provider.py  test_ai_provider_config.py  test_auth_api.py  test_badge_service.py  test_mnemonic_suggestion_api.py  test_notification_channel.py  test_ollama_provider.py  test_recall_delivery_policy.py  test_reminder_delivery.py  test_reminder_repository.py  test_reminder_scheduling.py  test_reminder_time_zones.py  test_reminders_table.py  test_review_flow_api.py  test_scheduler.py  test_spaced_repetition.py  test_suggest_mnemonic_use_case.py  test_time_zones.py  test_vocabulary_api.py
desktop/: Cargo.toml
desktop/api-config/: Cargo.toml
desktop/api-config/src/: lib.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: credential.rs  lib.rs  main.rs
docs/adr/: 0001-use-tauri-for-desktop-shell.md  0002-desktop-backend-mode.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: verify.sh
(+79 files in other folders)
