[package]
name = "lensword-api-config"
description = "Resolves and validates the API endpoint the desktop shell is allowed to talk to."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
url = "2"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
