[package]
name = "lensword-desktop"
description = "LensWord desktop shell — wraps the existing frontend production build."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lensword_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lensword-api-config = { path = "../api-config" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
